[project]
name = "gh-repo-cartographer"
version = "0.1.0"
description = "Map GitHub repositories to local checkouts and report sync status."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Harzva" }]
keywords = ["github", "codex", "repository", "inventory", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gh-repo-cartographer = "gh_repo_cartographer:main"

[project.urls]
Homepage = "https://github.com/Harzva/gh-repo-cartographer"
Repository = "https://github.com/Harzva/gh-repo-cartographer"
Issues = "https://github.com/Harzva/gh-repo-cartographer/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["gh_repo_cartographer"]

[tool.setuptools.package-dir]
"" = "scripts"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
